--- a/conference/NetDevConf2025-0x19/mq-cake-paper/isea.tex
+++ b/conference/NetDevConf2025-0x19/mq-cake-paper/isea.tex
@@ -12,6 +12,9 @@
 \usepackage{algpseudocode}
 \usepackage{svg}
 \usepackage{subcaption}
+\usepackage{listings}
+\usepackage{url}
+
 \pdfinfo{
 /Title (mq-cake: Scaling software rate limiting across CPU cores)  
 /Author (Jonas Köppeler, Toke H\o{}iland-J\o{}rgensen, Stefan Schmid)}
@@ -20,7 +23,7 @@
 }
 \setcounter{secnumdepth}{0}
 
-\begin{document} 
+\begin{document}
 \maketitle
 \input{abstract.tex}
 \section{Keywords}
